Add WIP and post layout update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="col-xs-12 centered">
       <h2 class="footer-heading">{{ site.title }}</h2>
-      <a href="#">source</a>
+      <a href="#" style="display: block; margin: 1em 0;">source code</a>
       <ul class="social-media-list">
         {% if site.github_username %}
         <li>
