--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,21 +5,28 @@
 
   <body>
 
+    <div style="background: #333; width: 100%; padding-bottom: 60px; margin-bottom: 50px;">
+
+    </div>
     <div class="page-content">
-      <div class="wrapper">
-        <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1">
+            <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-          <header class="post-header">
-            <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-            <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-          </header>
+              <header class="post-header">
+                <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+                <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+              </header>
 
-          <div class="post-content" itemprop="articleBody">
-            {{ content }}
+              <div class="post-content" itemprop="articleBody">
+                {{ content }}
+              </div>
+
+            </article>
           </div>
 
-        </article>
-
+        </div>
       </div>
     </div>
 
