Add minor updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
   <div class="row">
 
     <div class="col-xs-12 centered">
-      <h2 class="footer-heading">{{ site.title }}</h2>
-      <a href="#" style="display: block; margin: 1em 0;">source code</a>
+      <h2 class="footer-heading">{{ site.title }} - UI Developer</h2>
+      <a href="https://github.com/nimi/nimi.github.io" style="display: block; margin: 1em 0;">source code</a>
       <ul class="social-media-list">
         {% if site.github_username %}
         <li>
@@ -17,6 +17,9 @@
           {% include icon-twitter.html username=site.twitter_username %}
         </li>
         {% endif %}
+        <li>
+          {% include icon-linkedin.html username=site.twitter_username %}
+        </li>
       </ul>
     </div>
 
