--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,12 @@
 
   <body>
 
-    <div style="background: #333; width: 100%; padding-bottom: 60px; margin-bottom: 50px;">
+    <div class="post-bar"></div>
 
-    </div>
     <div class="page-content">
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1">
+          <div class="col-lg-6 col-lg-offset-3">
             <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
               <header class="post-header">
