--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,13 +11,13 @@
     position: relative;
 
     .avatar {
-        margin: auto;
+        margin: 50px auto 20px;
     }
 
     h1 {
         color: rgba(222, 91, 91, 1);
-        font-family: 'Martel', Arial, serif;
-        font-weight: 800;
+        // font-family: 'Noto Serif', Arial, serif;
+        font-weight: 700;
         margin: 0;
         text-shadow: 0 2px 1px rgba(0, 0, 0, 0.25);
     }
@@ -25,7 +25,7 @@
     h2,
     h3 {
         color: $background-color;
-        font-family: 'Raleway', Helvetica-neue, sans-serif;
+        font-family: 'Palaquin', Helvetica-neue, sans-serif;
         text-transform: lowercase;
     }
 }
@@ -118,12 +118,15 @@
  * Site footer
  */
 .site-footer {
-    background: $grey-color-light;
     bottom: 0;
-    padding: $spacing-unit 0;
     position: fixed;
     width: 100%;
     z-index: -1;
+}
+
+.site-footer > div {
+    background: $grey-color-light;
+    padding: $spacing-unit 0;
 }
 
 .footer-heading {
@@ -135,6 +138,7 @@
 .social-media-list {
     list-style: none;
     margin-left: 0;
+    margin-bottom: 0;
 }
 
 .footer-col-wrapper {
@@ -193,12 +197,26 @@
  */
 .page-content {
     background-color: $background-color;
-    margin-bottom: 200px;
+    margin-bottom: 225px;
     padding: $spacing-unit 0;
 }
 
 .page-heading {
     font-size: 20px;
+}
+
+/**
+ * Posts
+ */
+
+.post-bar {
+    background: rgba(217, 83, 79, 0.88); /* Old browsers */
+    background: -moz-linear-gradient(45deg, rgba(217, 83, 79, 0.88) 0%, #D6D6D6 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, rgba(217, 83, 79, 0.88) 0%, #D6D6D6 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(25deg, rgba(217, 83, 79, 0.88) 0%, #D6D6D6 100%);
+    width: 100%;
+    padding-bottom: 60px;
+
 }
 
 .post-list {
@@ -220,11 +238,6 @@
     font-size: 24px;
 }
 
-
-
-/**
- * Posts
- */
 .post-header {
     margin-bottom: $spacing-unit;
 }
@@ -252,6 +265,7 @@
 
     h3 {
         font-size: 26px;
+        margin-top: 40px;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -272,4 +286,8 @@
  */
 .headline {
     margin: 25px 0 20px;
+    font-size: 1.5em;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    font-family: 'Noto Serif', serif;
 }
