--- a/css/main.scss
+++ b/css/main.scss
@@ -4,13 +4,13 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Raleway", Helvetica, Arial, sans-serif;
+$base-font-family: "Palaquin", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     38px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
