--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,5 @@
+$on-largescreen: 1200px;
+
 /**
  * Site header
  */
@@ -6,8 +8,6 @@
     display: flex;
     flex-direction: column;
     min-height: 300px;
-
-    // Positioning context for the mobile navigation icon
     position: relative;
 
     .avatar {
@@ -16,7 +16,6 @@
 
     h1 {
         color: rgba(222, 91, 91, 1);
-        // font-family: 'Noto Serif', Arial, serif;
         font-weight: 700;
         margin: 0;
         text-shadow: 0 2px 1px rgba(0, 0, 0, 0.25);
@@ -27,6 +26,10 @@
         color: $background-color;
         font-family: 'Palaquin', Helvetica-neue, sans-serif;
         text-transform: lowercase;
+    }
+
+    @media-query($on-largescreen) {
+        background-size: cover;
     }
 }
 
